// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuAction renders component 1`] = `
<Fragment>
  <ForwardRef
    className="makeStyles-button-3"
    disableRipple={true}
    disabled={false}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <Component
      className="makeStyles-icon-2"
      src="icon"
    />
  </ForwardRef>
  <Component
    offset={0}
    open={false}
    placement="bottom-end"
  >
    <ForwardRef(ClickAwayListener)
      onClickAway={[Function]}
    >
      <ForwardRef(MenuList)
        className="makeStyles-menuList-1"
      >
        <Component
          close={[Function]}
          key=".0"
          onClick={[MockFunction]}
          title="test"
        />
        <Component
          close={[Function]}
          key=".1"
          onClick={[MockFunction]}
          title="test 2"
        />
      </ForwardRef(MenuList)>
    </ForwardRef(ClickAwayListener)>
  </Component>
</Fragment>
`;

exports[`MenuAction renders with optional props 1`] = `
<Fragment>
  <ForwardRef
    className="makeStyles-button-3"
    disableRipple={true}
    disabled={false}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <Component
      className="makeStyles-icon-2"
      src="icon"
    />
  </ForwardRef>
  <Component
    offset="0 20"
    open={false}
    placement="bottom-end"
  >
    <ForwardRef(ClickAwayListener)
      onClickAway={[Function]}
    >
      <ForwardRef(MenuList)
        className="makeStyles-menuList-1"
      >
        <Component
          close={[Function]}
          key=".0"
          onClick={[MockFunction]}
          title="test"
        />
        <Component
          close={[Function]}
          key=".1"
          onClick={[MockFunction]}
          title="test 2"
        />
      </ForwardRef(MenuList)>
    </ForwardRef(ClickAwayListener)>
  </Component>
</Fragment>
`;
